discussion/kv_engine/183063/183063_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'a6922c068' into 'couchbase/master'

* commit 'a6922c068':
  MB-53922: Remove ~StoredValueProxy

Change-Id: I84bd0d3126c66e1dc94bc57c26e21afe88003f34

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-21 10:52:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-21 11:05:40.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42951/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42951/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21896/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:63:40: error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
    : lock(std::move(hbl)), value(sv), valueStats(stats) {
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1029:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1030:71: error: no type named "RetSVPTag" in "HashTable::StoredValueProxy" [clang-diagnostic-error]
HashTable::StoredValueProxy HashTable::findForWrite(StoredValueProxy::RetSVPTag,
                                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1042:22: error: no matching constructor for initialization of "HashTable::StoredValueProxy" [clang-diagnostic-error]
    StoredValueProxy prepare{std::move(result.lock), result.pendingSV};
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:736:9: note: candidate constructor not viable: requires single argument "other", but 2 arguments were provided
        StoredValueProxy(const StoredValueProxy& other) = delete;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:740:9: note: candidate constructor not viable: requires 1 argument, but 2 were provided
        StoredValueProxy(StoredValueProxy&&) = default;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:60:30: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
HashTable::StoredValueProxy::StoredValueProxy(HashBucketLock&& hbl,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1438:53: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
    const auto preProps = valueStats.prologue(&value);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:516:1: note: "prologue" declared here
HashTable::Statistics::StoredValueProperties HashTable::Statistics::prologue(
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21896/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21896/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51175/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/hash_table.cc(63): error C2327: "HashTable::valueStats": is not a type name, static, or enumerator ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51175/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/654/ : FAILURE

Compile error at [2022-11-21T11:00:58.250Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/654/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11624/ : FAILURE

Compile error at [2022-11-21T11:04:41.308Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11624/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11714/ : FAILURE

Compile error at [2022-11-21T11:00:52.797Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11714/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25206/ : FAILURE

Compile error at [2022-11-21T11:02:37.537Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25206/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24356/ : FAILURE

Compile error at [2022-11-21T11:03:44.927Z] ../kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24356/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23943/ : FAILURE

Compile error at [2022-11-21T11:03:38.845Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23943/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23406/ : FAILURE

Compile error at [2022-11-21T10:58:13.373Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23406/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32361/ : FAILURE

Compile error at [2022-11-21T11:04:27.490Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/hash_table.cc:63:40:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32361/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21270/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-11-21 11:42:55.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
